--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -4,10 +4,10 @@ black==22.3.0
 click==8.1.3
 Django==4.0.5
 django-debug-toolbar==3.4.0
+django-environ==0.9.0
 djangorestframework==3.13.1
 djangorestframework-camel-case==1.3.0
 drf-spectacular==0.22.1
-environ==1.0
 gunicorn==20.1.0
 inflection==0.5.1
 jsonschema==4.6.0
