--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,16 @@
 *.pyc
 __pycache__/
 local_settings.py
+src/db/
+db/
 db.sqlite3
 db.sqlite3-journal
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
-src/api/static
+src/static
+static/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
