--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     command: sh -c "python manage.py makemigrations --no-input &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    gunicorn config.wsgi:application --bind 0.0.0.0:${API_PORT}"
+                    python manage.py runserver 0.0.0.0:${API_PORT}"
+                    # gunicorn config.wsgi:application --bind 0.0.0.0:${API_PORT}"
     volumes:
       - ./api:/src/api
       - .env:/src/.env
