--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,23 +1,40 @@
 asgiref==3.5.2
 attrs==21.4.0
 black==22.3.0
+certifi==2022.6.15
+cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.1.3
+cryptography==37.0.2
+defusedxml==0.7.1
+dj-rest-auth==2.2.4
 Django==4.0.5
+django-allauth==0.51.0
+django-cors-headers==3.13.0
 django-debug-toolbar==3.4.0
 django-environ==0.9.0
 djangorestframework==3.13.1
 djangorestframework-camel-case==1.3.0
+djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.22.1
 gunicorn==20.1.0
+idna==3.3
 inflection==0.5.1
 jsonschema==4.6.0
 mypy-extensions==0.4.3
+oauthlib==3.2.0
 pathspec==0.9.0
 platformdirs==2.5.2
+pycparser==2.21
+PyJWT==2.4.0
 pyrsistent==0.18.1
+python3-openid==3.2.0
 pytz==2022.1
 PyYAML==6.0
+requests==2.28.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.2.0
 uritemplate==4.1.1
+urllib3==1.26.9
