--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -13,6 +13,7 @@ django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-debug-toolbar==3.4.0
 django-environ==0.9.0
+django-extensions==3.1.5
 djangorestframework==3.13.1
 djangorestframework-camel-case==1.3.0
 djangorestframework-simplejwt==5.2.0
@@ -22,6 +23,7 @@ idna==3.3
 inflection==0.5.1
 jsonschema==4.6.0
 mypy-extensions==0.4.3
+mysqlclient==2.1.0
 oauthlib==3.2.0
 pathspec==0.9.0
 platformdirs==2.5.2
